--- a/codecs/avif/Makefile
+++ b/codecs/avif/Makefile
@@ -2,10 +2,6 @@
 CODEC_URL = https://github.com/AOMediaCodec/libavif/archive/refs/tags/v1.0.1.tar.gz
 CODEC_PACKAGE = node_modules/libavif.tar.gz
 
-# Take from libavif/ext/libsharpyuv.cmd
-WEBP_URL = https://chromium.googlesource.com/webm/libwebp
-WEBP_COMMIT = e2c85878f6a33f29948b43d3492d9cdaf801aa54
-
 # using libaom from https://aomedia.googlesource.com/aom
 LIBAOM_URL = https://aomedia.googlesource.com/aom/+archive/v3.7.0.tar.gz
 LIBAOM_PACKAGE = node_modules/libaom.tar.gz
@@ -13,7 +9,6 @@ LIBAOM_PACKAGE = node_modules/libaom.tar.gz
 export CODEC_DIR = node_modules/libavif
 export BUILD_DIR = node_modules/build
 export LIBAOM_DIR = node_modules/libaom
-export LIBSHARPYUV_DIR = node_modules/libavif/ext/libwebp
 
 override CFLAGS += "-Wno-unused-macros"
 
@@ -30,7 +25,7 @@ ENVIRONMENT = worker
 
 HELPER_MAKEFLAGS := -f helper.Makefile
 
-.PHONY: buildsharp all clean
+.PHONY: all clean
 
 all: $(OUT_ENC_JS) $(OUT_DEC_JS) $(OUT_ENC_MT_JS)
 
@@ -70,7 +65,7 @@ $(OUT_DEC_JS): $(OUT_DEC_CPP) $(CODEC_DIR)/CMakeLists.txt $(LIBAOM_DIR)/CMakeLis
 			-DCONFIG_MULTITHREAD=0 \
 		" \
 		ENVIRONMENT=$(ENVIRONMENT) \
-		LIBAVIF_FLAGS="-DAVIF_CODEC_AOM_ENCODE=0 -DAVIF_LOCAL_LIBSHARPYUV=ON"
+		LIBAVIF_FLAGS="-DAVIF_CODEC_AOM_ENCODE=0"
 
 $(CODEC_PACKAGE):
 	mkdir -p $(@D)
